--- a/work/Pages/Home.xaml
+++ b/work/Pages/Home.xaml
@@ -7,53 +7,9 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Home">
-    <Page.Resources>
-            <Style TargetType="Button" x:Key="commonBtnStyle">
-                <EventSetter Event="Button.Click" Handler="CommonBtnClickHandler"/>
-                <Setter Property="Visibility" Value="Hidden"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                               BorderBrush="{TemplateBinding BorderBrush}"
-                               BorderThickness="{TemplateBinding BorderThickness}"
-                               CornerRadius="{Binding ActualWidth,ElementName=Button00}">
-                                <!-- 使边缘圆形 -->
-                                <ContentPresenter HorizontalAlignment="Center"
-                                             VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="ctrlButton" TargetType="Button">
-                <Setter Property="Background" Value="#E7E0F8"/>
-                <Setter Property="Foreground" Value="Black"/>
-                <Setter Property="BorderBrush" Value="Transparent"/>
-                <Setter Property="BorderThickness" Value="2"/>
-                <Setter Property="Padding" Value="10"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                 BorderBrush="{TemplateBinding BorderBrush}"
-                 BorderThickness="{TemplateBinding BorderThickness}"
-                 CornerRadius="20">
-                                <ContentPresenter HorizontalAlignment="Center"
-                               VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <BitmapImage x:Key="chessBoardImage" UriSource="pack://application:,,,/Images/chessBoard.png" />
-            <ImageBrush x:Key="chessBoardBackground" ImageSource="{StaticResource chessBoardImage}"/>
-        </Page.Resources>
-
-        <Grid Background="Ivory">
+    
+    <Grid Background="Ivory">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
@@ -64,9 +20,9 @@
                 <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -74,12 +30,12 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
 
-
-            <Button Grid.Column="1" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2" x:Name="HistoryBtn"  Content="历史记录"  Click="jumpToHistory" Style="{StaticResource ctrlButton}"/>
-            <Button Grid.Column="3" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2" x:Name="AIBtn"  Content="人机对战"  Click="jumpToAI" Style="{StaticResource ctrlButton}"/>
-            <Button Grid.Column="5" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2" x:Name="PeopleBtn"  Content="人人对战"  Click="jumpToPvp" Style="{StaticResource ctrlButton}"/>
-            <Button Grid.Column="7" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2" x:Name="LocalBtn"  Content="本地对战"  Click="jumpToLocal" Style="{StaticResource ctrlButton}"/>
-
+        <Grid Grid.ColumnSpan="2" Grid.RowSpan="8" Background="#a8d8ea"></Grid>
+            
+            <Button Grid.Column="3" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="AIBtn"  Content="人机对战"  Click="jumpToAI" Style="{StaticResource ctrlButton}"/>
+            <Button Grid.Column="5" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="PeopleBtn"  Content="人人对战" Click="jumpToPvp" Style="{StaticResource ctrlButton}"/>
+            <Button Grid.Column="3" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="LocalBtn"  Content="本地对战"  Click="jumpToLocal" Style="{StaticResource ctrlButton}"/>
+            <Button Grid.Column="5" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="HistoryBtn"  Content="历史记录"  Click="jumpToHistory" Style="{StaticResource ctrlButton}"/>
 
 
     </Grid>
