--- a/work/MainWindow.xaml
+++ b/work/MainWindow.xaml
@@ -26,8 +26,9 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-        
+           
             <Button Content="jump to Main" Background="AliceBlue" Click="jumpToMain"> </Button>
+            <Button Grid.Row="1" Content=" jumpToWebsocketPvp" Background="AliceBlue" Click=" jumpToWebsocketPvp"></Button>
             <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="4" Background="Beige">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
